--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -22,9 +22,9 @@
                             <p class="text-center">&nbsp;</p>
                             <h5 class="text-center"><a href="https://trentqq.github.io/">Qi Qi<sup>1</sup></a>, Kunqian Li<sup>2</sup><sup>*</sup>, Haiyong Zheng<sup>1</sup>, Xiang Gao<sup>2</sup>, Guojia Hou<sup>3</sup>, Kun Sun<sup>4</sup></h5>
                             <p class="text-center"><sup>1</sup>College of Information Science and Engineering, Ocean University of China</p>
-                            <p class="text-center"><sup>1</sup>College of Engineering, Ocean University of China</p>
-                            <p class="text-center"><sup>1</sup>College of Computer Science and Technology, Qingdao University</p>
-                            <p class="text-center"><sup>1</sup>School of Computer Science, China University of Geosciences</p>
+                            <p class="text-center"><sup>2</sup>College of Engineering, Ocean University of China</p>
+                            <p class="text-center"><sup>3</sup>College of Computer Science and Technology, Qingdao University</p>
+                            <p class="text-center"><sup>4</sup>School of Computer Science, China University of Geosciences</p>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/UIEB_60.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-center">Fig 5. Visual comparisons on underwater images from UIEB challenging test set.</p>
+                            <p class="text-center">Fig 5. Visual comparisons on underwater images from UIEB challenging test set. Perceptual scores are marked on the upper right corner.</p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/RUIE.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-center">Fig 6. Visual comparisons on underwater images from RUIE dataset.</p>
+                            <p class="text-center">Fig 6. Visual comparisons on underwater images from RUIE dataset. Perceptual scores are marked on the upper right corner.</p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/EUVP.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-center">Fig 7. Visual comparisons on underwater images from EUVP dataset.</p>
+                            <p class="text-center">Fig 7. Visual comparisons on underwater images from EUVP dataset. Perceptual scores are marked on the upper right corner.</p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/SQUID.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-center">Fig 8. Visual comparisons on challenging underwater images from SQUID.</p>
+                            <p class="text-center">Fig 8. Visual comparisons on challenging underwater images from SQUID. Perceptual scores are marked on the upper right corner.</p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
