--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -48,7 +48,7 @@
                         <p class="text-left">&nbsp;</p>
                         <h5 class="text-center">
                             <a href="">[Paper]</a>
-                            <a href="https://github.com/trentqq/SGUIE-Net">[Code]</a>
+                            <a href="https://github.com/trentqq/SGUIE-Net_Simple">[Code]</a>
                             <a href="./SGUIE-Net_files/SGUIE-Net_Suppy.pdf">[Supplementary]</a>
                             <a href="https://drive.google.com/drive/folders/1gA3Ic7yOSbHd3w214-AgMI9UleAt4bRM?usp=sharing">[DataSet]</a>
                         </h5>
