--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -72,7 +72,7 @@
 
                                     2. We design SGUIE-Net as a deep enhancement network with multi-scale perception, whose main branch and semantic branch are fused to complement each other. The main branch is used to provide end-to-end enhancement while preserving image texture details in original scale, and the semantic branch is used to complement the semantically guided features with multi-scale perception. <br>
 
-                                    3. We establish a new benchmark, namely SUIM-E, by extending the Segmentation of Underwater IMagery (SUIM) dataset [9] with corresponding enhancement reference images. Then, comprehensive experiments, evaluations and analyses conducted on multiple commonly used datasets verify the good performance of the proposed SGUIE-Net.<br>
+                                    3. We establish a new benchmark, namely SUIM-E, by extending the Segmentation of Underwater IMagery (SUIM) dataset with corresponding enhancement reference images. Then, comprehensive experiments, evaluations and analyses conducted on multiple commonly used datasets verify the good performance of the proposed SGUIE-Net.<br>
 
                                     4. Extensive experiments have show that the U-shape transformer we proposed combined
                                     with the multi-color space loss function achieves state-of-the-art performance on
@@ -126,38 +126,10 @@
                         </div>
                     </div>
 
-
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/UIEB.png" width="900" alt="">
-                            <p>&nbsp;</p>
-                            <p class="text-center">Fig 4. Visual comparisons on underwater images from UIEB test set.</p>
-                            <p>&nbsp;</p>
-                        </div>
-                    </div>
-
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/UIEB_60.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-center">Fig 5. Visual comparisons on underwater images from UIEB challenging test set. Perceptual scores are marked on the upper right corner.</p>
-                            <p>&nbsp;</p>
-                        </div>
-                    </div>
-
-
-
-
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/RUIE.png" width="900" alt="">
-                            <p>&nbsp;</p>
-                            <p class="text-center">Fig 6. Visual comparisons on underwater images from RUIE dataset. Perceptual scores are marked on the upper right corner.</p>
-                            <p>&nbsp;</p>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/EUVP.png" width="900" alt="">
-                            <p>&nbsp;</p>
-                            <p class="text-center">Fig 7. Visual comparisons on underwater images from EUVP dataset. Perceptual scores are marked on the upper right corner.</p>
+                            <p class="text-center">Fig 4. Visual comparisons on underwater images from UIEB challenging test set. Perceptual scores are marked on the upper right corner.</p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
@@ -165,20 +137,10 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/SQUID.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-center">Fig 8. Visual comparisons on challenging underwater images from SQUID. Perceptual scores are marked on the upper right corner.</p>
+                            <p class="text-center">Fig 5. Visual comparisons on challenging underwater images from SQUID. Perceptual scores are marked on the upper right corner.</p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
-
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/ColorCheck7.png" width="900" alt="">
-                            <p>&nbsp;</p>
-                            <p class="text-center">Fig 9. Visual comparisons on images of Color-Checker7. The two images are taken by the Fuji Z33 (ﬁrst row) and Olympus T6000 (second row), respectively.</p>
-                            <p>&nbsp;</p>
-                        </div>
-                    </div>
-
-
 
                     <hr>
 
