--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -145,7 +145,7 @@
                     <hr>
 
 
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-lg-12 mb-4 mt-2 text-left">
                             <h2>Demo Video</h2>
                         </div>
@@ -156,7 +156,7 @@
                         </video>
                         <p>&nbsp;</p>
                     </div>
-                    <hr>
+                    <hr> -->
 
 
 
