--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -20,7 +20,8 @@
 
                             <h1 class="text-center"> SGUIE-Net: Semantic Attention Guided Underwater Image Enhancement with Multi-Scale Perception</h1>
                             <p class="text-center">&nbsp;</p>
-                            <h5 class="text-center"><a href="https://trentqq.github.io/">Qi Qi<sup>1</sup></a>, Kunqian Li<sup>2</sup><sup>*</sup>, Haiyong Zheng<sup>1</sup>, Xiang Gao<sup>2</sup>, Guojia Hou<sup>3</sup>, Kun Sun<sup>4</sup></h5>
+                            <h5 class="text-center"><a href="https://trentqq.github.io/">Qi Qi<sup>1</sup></a>, Kunqian Li<sup>2</sup><sup>*</sup>, <a href="http://ouc.ai/zhenghaiyong/">Haiyong Zheng<sup>1</sup></a>, <a href="https://ouc-xgao.github.io/">Xiang Gao<sup>2</sup></a>,
+                                Guojia Hou<sup>3</sup>, Kun Sun<sup>4</sup></h5>
                             <p class="text-center"><sup>1</sup>College of Information Science and Engineering, Ocean University of China</p>
                             <p class="text-center"><sup>2</sup>College of Engineering, Ocean University of China</p>
                             <p class="text-center"><sup>3</sup>College of Computer Science and Technology, Qingdao University</p>
