--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -48,7 +48,7 @@
                         <p style="text-align:justify"><em>Due to the wavelength-dependent light attenuation and scattering, underwater images usually suﬀer from color distortion and blurred details. However, due to the limited number of paired underwater images with undistorted images as reference, training deep enhancement models for diverse degradation types is quite diﬃcult. To boost the performance of data-driven approaches, it is essential to establish more eﬀective learning mechanisms that mine richer supervised information from limited training sample resources. In this paper, we propose a novel underwater image enhancement network, called SGUIENet, in which we introduce semantic information as high-level guidance across diﬀerent images that share common semantic regions. Accordingly, we propose semantic region-wise enhancement module to perceive the degradation of diﬀerent semantic regions from multiple scales and feed it back to the global attention features extracted from its original scale. This strategy helps to achieve robust and visually pleasant enhancements to diﬀerent semantic objects, which should thanks to the guidance of semantic information for diﬀerentiated enhancement. More importantly, for those degradation types that are not common in the training sample distribution, the guidance connects them with the already well-learned types according to their semantic relevance. Extensive experiments on the publicly available datasets and our proposed dataset demonstrated the impressive performance of SGUIE-Net.</em></p>
                         <p class="text-left">&nbsp;</p>
                         <h5 class="text-center">
-                            <a href="">[Paper]</a>
+                            <a href="https://arxiv.org/abs/2201.02832">[Paper]</a>
                             <a href="https://github.com/trentqq/SGUIE-Net_Simple">[Code]</a>
                             <a href="./SGUIE-Net_files/SGUIE-Net_Suppy.pdf">[Supplementary]</a>
                             <a href="https://drive.google.com/drive/folders/1gA3Ic7yOSbHd3w214-AgMI9UleAt4bRM?usp=sharing">[DataSet]</a>
@@ -167,16 +167,25 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 text-left">
                             <h2>Citation</h2>
+                            <p>
+                                @misc{qi2022sguienet,
+                                <br> title={SGUIE-Net: Semantic Attention Guided Underwater Image Enhancement with Multi-Scale Perception},
+                                <br> author={Qi Qi and Kunqian Li and Haiyong Zheng and Xiang Gao and Guojia Hou and Kun Sun},
+                                <br> year={2022},
+                                <br> eprint={2201.02832},
+                                <br> archivePrefix={arXiv},
+                                <br> primaryClass={eess.IV} }
+                            </p>
                         </div>
                     </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 text-left">
+                    <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 text-left">
 
                         <p><span style="color:#000000;font-family:&#39;Courier New&#39;;font-size:15px;">
                                 
                             </span></p>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
