--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -167,15 +167,19 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 text-left">
                             <h2>Citation</h2>
-                            <p>
-                                @misc{qi2022sguienet,
-                                <br> title={SGUIE-Net: Semantic Attention Guided Underwater Image Enhancement with Multi-Scale Perception},
-                                <br> author={Qi Qi and Kunqian Li and Haiyong Zheng and Xiang Gao and Guojia Hou and Kun Sun},
-                                <br> year={2022},
-                                <br> eprint={2201.02832},
-                                <br> archivePrefix={arXiv},
-                                <br> primaryClass={eess.IV} }
-                            </p>
+                            <br>
+
+                            <pre>@misc{qi2022sguienet,
+    title={SGUIE-Net: Semantic Attention Guided Underwater Image Enhancement with Multi-Scale Perception},
+    author={Qi Qi and Kunqian Li and Haiyong Zheng and Xiang Gao and Guojia Hou and Kun Sun},
+    year={2022},
+    eprint={2201.02832},
+    archivePrefix={arXiv},
+    primaryClass={eess.IV}
+    }
+                            </pre>
+
+
                         </div>
                     </div>
                     <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 text-left">
