--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -62,27 +62,25 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 text-center">
                             <h2>Highlights</h2>
+                            <ol>
+                                <li>
+                                    <p class="text-left">We introduce semantic association into underwater image enhancement task and propose a semantic attention guided underwater image enhancement network called SGUIE-Net. It learns features incorporating high-level semantic
+                                        information to build enhancement guidance for those degradation types that are uncommon in the training sample distribution but semantically relevant with the well-learned types.
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="text-left">We design SGUIE-Net as a deep enhancement network with multi-scale perception, whose main branch and semantic branch are fused to complement each other. The main branch is used to provide end-to-end enhancement while
+                                        preserving image texture details in original scale, and the semantic branch is used to complement the semantically guided features with multi-scale perception.</p>
+                                </li>
+                                <li>
+                                    <p class="text-left">We establish a new benchmark, namely SUIM-E, by extending the Segmentation of Underwater IMagery (SUIM) dataset with corresponding enhancement reference images. Then, comprehensive experiments, evaluations and analyses
+                                        conducted on multiple commonly used datasets verify the good performance of the proposed SGUIE-Net.</p>
+                                </li>
+                            </ol>
                         </div>
                     </div>
                 </div>
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 text-center  offset-xl-0 col-xl-12">
-                            <p class="text-left"><em>
-                                    1. We introduce semantic association into underwater image enhancement task and propose a semantic attention guided underwater image enhancement network called SGUIE-Net. It learns features incorporating high-level semantic information to build enhancement guidance for those degradation types that are uncommon in the training sample distribution but semantically relevant with the well-learned types. <br>
-
-                                    2. We design SGUIE-Net as a deep enhancement network with multi-scale perception, whose main branch and semantic branch are fused to complement each other. The main branch is used to provide end-to-end enhancement while preserving image texture details in original scale, and the semantic branch is used to complement the semantically guided features with multi-scale perception. <br>
-
-                                    3. We establish a new benchmark, namely SUIM-E, by extending the Segmentation of Underwater IMagery (SUIM) dataset with corresponding enhancement reference images. Then, comprehensive experiments, evaluations and analyses conducted on multiple commonly used datasets verify the good performance of the proposed SGUIE-Net.<br>
-
-                                    4. Extensive experiments have show that the U-shape transformer we proposed combined
-                                    with the multi-color space loss function achieves state-of-the-art performance on
-                                    several public datasets and our dataset.<br>
-                                </em></p>
-                            <p class="text-left">&nbsp;</p>
-                        </div>
-                    </div>
-
 
                     <hr>
                     <div class="row">
