--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -167,13 +167,11 @@
                             <h2>Citation</h2>
                             <br>
 
-                            <pre>@misc{qi2022sguienet,
+                            <pre>@article{qi2022sguienet,
     title={SGUIE-Net: Semantic Attention Guided Underwater Image Enhancement with Multi-Scale Perception},
     author={Qi Qi and Kunqian Li and Haiyong Zheng and Xiang Gao and Guojia Hou and Kun Sun},
-    year={2022},
-    eprint={2201.02832},
-    archivePrefix={arXiv},
-    primaryClass={eess.IV}
+    journal={arXiv preprint arXiv:2201.02832},
+    year={2022}
     }
                             </pre>
 
