--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 text-center  offset-xl-0 col-xl-12">
-                        <p style="text-align:justify"><em>Due to the wavelength-dependent light attenuation and scattering, underwater images usually suﬀer from color distortion and blurred details. However, due to the limited number of paired underwater images with undistorted images as reference, training deep enhancement models for diverse degradation types is quite diﬃcult. To boost the performance of data-driven approaches, it is essential to establish more eﬀective learning mechanisms that mine richer supervised information from limited training sample resources. In this paper, we propose a novel underwater image enhancement network, called SGUIENet, in which we introduce semantic information as high-level guidance across diﬀerent images that share common semantic regions. Accordingly, we propose semantic region-wise enhancement module to perceive the degradation of diﬀerent semantic regions from multiple scales and feed it back to the global attention features extracted from its original scale. This strategy helps to achieve robust and visually pleasant enhancements to diﬀerent semantic objects, which should thanks to the guidance of semantic information for diﬀerentiated enhancement. More importantly, for those degradation types that are not common in the training sample distribution, the guidance connects them with the already well-learned types according to their semantic relevance. Extensive experiments on the publicly available datasets and our proposed dataset demonstrated the impressive performance of SGUIE-Net.</em></p>
+                        <p style="text-align:justify"><em>Due to the wavelength-dependent light attenuation, refraction and scattering, underwater images usually suffer from color distortion and blurred details.However, due to the limited number of paired underwater images with undistorted images as reference, training deep enhancement models for diverse degradation types is quite difficult. To boost the performance of data-driven approaches, it is essential to establish more effective learning mechanisms that mine richer supervised information from limited training sample resources. In this paper, we propose a novel underwater image enhancement network, called SGUIE-Net, in which we introduce semantic information as high-level guidance via region-wise enhancement feature learning. Accordingly, we propose semantic region-wise enhancement module to better learn local enhancement features for semantic regions with multi-scale perception. After using them as complementary features and feeding them to the main branch, which extracts the global enhancement features on the original image scale, the fused features bring semantically consistent and visually superior enhancements. Extensive experiments on the publicly available datasets and our proposed dataset demonstrate the impressive performance of SGUIE-Net.</em></p>
                         <p class="text-left">&nbsp;</p>
                         <h5 class="text-center">
                             <a href="https://arxiv.org/abs/2201.02832">[Paper]</a>
@@ -64,13 +64,13 @@
                             <h2>Highlights</h2>
                             <ol>
                                 <li>
-                                    <p class="text-left">We introduce semantic association into underwater image enhancement task and propose a semantic attention guided underwater image enhancement network called SGUIE-Net. It learns features incorporating high-level semantic
-                                        information to build enhancement guidance for those degradation types that are uncommon in the training sample distribution but semantically relevant with the well-learned types.
+                                    <p class="text-left">We propose a semantic attention guided underwater image enhancement network called SGUIE-Net. It learns enhancement features incorporating semantic clues to help recover those degradations that are uncommon in the training
+                                        sample distribution but semantically relevant with the well-learned types.
                                     </p>
                                 </li>
                                 <li>
-                                    <p class="text-left">We design SGUIE-Net as a deep enhancement network with multi-scale perception, whose main branch and semantic branch are fused to complement each other. The main branch is used to provide end-to-end enhancement while
-                                        preserving image texture details in original scale, and the semantic branch is used to complement the semantically guided features with multi-scale perception.</p>
+                                    <p class="text-left">We design SGUIE-Net as a deep enhancement network with multi-scale perception, whose main branch for global-wise learning and semantic branch for region-wise learning are fused to complement each other. The main branch
+                                        is used to provide end-to-end enhancement while preserving image texture details in original scale, and the semantic branch is used to complement the semantic attention guided features with multi-scale perception.</p>
                                 </li>
                                 <li>
                                     <p class="text-left">We establish a new benchmark, namely SUIM-E, by extending the Segmentation of Underwater IMagery (SUIM) dataset with corresponding enhancement reference images. Then, comprehensive experiments, evaluations and analyses
@@ -93,18 +93,17 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/SGUIE-Net_1.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-left">Fig 1. Architecture of SGUIE-Net. Our SGUIE-Net contains two enhancement branches for multi-scale perception, the main (top) branch works on the original input scale through the cascaded attention-aware enhancement module which
-                                contains multiple residual groups (RGs), and additionally embeds a semantic guided feature extraction and fusion module (SGF) to achieve enhanced multi-scale features. The bottom branch works on the semantic level, learning
-                                multi-scale semantic association features with encoder-decoder structure. It builds semantic enhancement guidance through the semantic region-wise enhancement module (SRM) and then feeds them back to the main branch. The
-                                details of the FAB, RG and SGF modules are shown in Figure 2.</p>
+                            <p class="text-left">Fig 1. The architecture of SGUIE-Net. Our SGUIE-Net contains two enhancement branches for multi-scale perception, the main (top) branch works on the original input scale through the cascaded attention-aware enhancement module
+                                (CAM) which contains three residual groups (RGs), and additionally embeds a semantic guided feature extraction and fusion module (SGF) to receive enhanced multi-scale features. The bottom branch learns multi-scale enhancement
+                                features with semantic attention using an encoder-decoder structure. It builds semantic enhancement guidance through the semantic region-wise enhancement module (SRM) and then feeds them back to the main branch. The details
+                                of the FAB, RG and SGF modules are shown in Figure 2.</p>
                             <p>&nbsp;</p>
                             <p>&nbsp;</p>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/SGUIE-Net_2.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-left">Fig 2. The architecture of the basic blocks of our SGUIE-Net. (a) Feature attention block (FAB) consists of cascaded channel attention (CA) and pixel attention (PA) module. (b) illustrates the RG module formed by multiple FABs
-                                with shorted connections. (c) The SFG module takes the global attention features obtained by the head of the main branch, semantic mask and the semantic region-based attention features as the inputs. Then, the SFG module
-                                extracts the local parts of the global attention features according to the semantic guidance for the later fusion on the semantic region-based attention features.</p>
+                            <p class="text-left">Fig 2. The architectures of the basic blocks of our SGUIE-Net. (a) Feature attention block (FAB) consists of cascaded channel attention (CA) and pixel attention (PA) module. (b) illustrates the RG module formed by multiple
+                                FABs with shorted connections. (c) The SFG module takes the global intermediate residual feature <i><b>F<sub>g</sub></b></i>, semantic mask <i><b>M</b></i> and the region-wise residual enhancement feature <i><b>F<sub>k</sub></b></i>                                as the inputs. Then, the SFG module extracts the local parts of <i><b>F<sub>g</sub></b></i> according to the semantic guidance of <i><b>M</b></i> for the later fusion with <i><b>F<sub>k</sub></b></i>.</p>
                             <p>&nbsp;</p>
                             <p>&nbsp;</p>
                         </div>
@@ -120,15 +119,17 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/SUIM-E.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-center">Fig. 3. Visual comparisons on underwater images from SUIM-E test set.</p>
+                            <p class="text-center">Fig. 3. Visual comparisons on underwater images from SUIM-E test set. The perceptual score is marked on the upper right corner of each enhancement.</p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/UIEB_60.png" width="900" alt="">
+                        <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/UIEB60-RUIE-EUVP.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-center">Fig 4. Visual comparisons on underwater images from UIEB challenging test set. Perceptual scores are marked on the upper right corner.</p>
+                            <p class="text-center">Fig 4. Visual comparisons on underwater images from UIEB Challenging set (the top two rows), RUIE (the middle two rows) and EUVP (the bottom two rows) datasets. The perceptual score is marked on the upper right corner of each
+                                enhancement.
+                            </p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
@@ -136,7 +137,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/SQUID.png" width="900" alt="">
                             <p>&nbsp;</p>
-                            <p class="text-center">Fig 5. Visual comparisons on challenging underwater images from SQUID. Perceptual scores are marked on the upper right corner.</p>
+                            <p class="text-center">Fig 5. Visual comparisons on challenging underwater images from SQUID. The perceptual score is marked on the upper right corner of each enhancement.</p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
