--- a/TCTL-Net.html
+++ b/TCTL-Net.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TCTL-Net Project Page</title>
     <!-- Bootstrap -->
-    <link href="./SGUIE-Net_files/bootstrap-4.0.0.css" rel="stylesheet">
+    <link href="./static/css/bootstrap-4.0.0.css" rel="stylesheet">
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1036.0" data-gr-ext-installed="">
@@ -48,7 +48,8 @@
                         <p class="text-left">&nbsp;</p>
                         <h5 class="text-center">
                             <!-- <a href="https://arxiv.org/abs/2201.02832">[Paper]</a> -->
-                            <a href="https://github.com/trentqq/TCTL-Net">[Code]</a>
+                            
+                            <a href="https://github.com/trentqq/TCTL-Net"><img src="static/images/GitHub.png" width="80" alt="code"/></a>
                             <!-- <a href="./SGUIE-Net_files/SGUIE-Net_Suppy.pdf">[Supplementary]</a> -->
                             <!-- <a href="https://drive.google.com/drive/folders/1gA3Ic7yOSbHd3w214-AgMI9UleAt4bRM?usp=sharing">[DataSet]</a> -->
                         </h5>
@@ -92,13 +93,7 @@
                             <p>&nbsp;</p>
                             <p>&nbsp;</p>
                         </div>
-                        <!-- <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./SGUIE-Net_files/images/SGUIE-Net_2.png" width="900" alt="">
-                            <p>&nbsp;</p>
-                            <p class="text-left">Fig 2. The architectures of the basic blocks of our SGUIE-Net. (a) Feature attention block (FAB) consists of cascaded channel attention (CA) and pixel attention (PA) module. (b) illustrates the RG module formed by multiple
-                                FABs with shorted connections. (c) The SFG module takes the global intermediate residual feature <i><b>F<sub>g</sub></b></i>, semantic mask <i><b>M</b></i> and the region-wise residual enhancement feature <i><b>F<sub>k</sub></b></i>                                as the inputs. Then, the SFG module extracts the local parts of <i><b>F<sub>g</sub></b></i> according to the semantic guidance of <i><b>M</b></i> for the later fusion with <i><b>F<sub>k</sub></b></i>.</p>
-                            <p>&nbsp;</p>
-                            <p>&nbsp;</p>
-                        </div> -->
+                        
                     </div>
 
                     <hr>
@@ -108,6 +103,14 @@
                             <p>&nbsp;</p>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./TCTL-Net_files/images/SQUID.png" width="900" alt="">
+                            <p>&nbsp;</p>
+                            <p class="text-center">Fig. 2. The visual comparison of enhancements on the images of the SQUID dataset. From left to right, (a) the raw images of SQUID from four dive sites, their enhancements with (b) Water-Net, (c) Ucolor, (d) UICoE-Net, (e) LCL-Net and (f) the proposed TCTL-Net are presented, respectively.</p>
+                            <p>&nbsp;</p>
+                        </div>
+                    </div>
+
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center col-xl-12"> <img src="./TCTL-Net_files/images/3D.png" width="900" alt="">
                             <p>&nbsp;</p>
@@ -186,10 +189,10 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="./SGUIE-Net_files/jquery-3.2.1.min.js"></script>
+    <script src="./static/js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="./SGUIE-Net_files/popper.min.js"></script>
-    <script src="./SGUIE-Net_files/bootstrap-4.0.0.js"></script>
+    <!-- <script src="./SGUIE-Net_files/popper.min.js"></script> -->
+    <script src="./static/js/bootstrap-4.0.0.js"></script>
 
 
 </body>
