--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SGUIE-Net Project Page</title>
     <!-- Bootstrap -->
-    <link href="./SGUIE-Net_files/bootstrap-4.0.0.css" rel="stylesheet">
+    <link href="./static/css/bootstrap-4.0.0.css" rel="stylesheet">
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1036.0" data-gr-ext-installed="">
@@ -194,10 +194,10 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="./SGUIE-Net_files/jquery-3.2.1.min.js"></script>
+    <script src="./static/js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="./SGUIE-Net_files/popper.min.js"></script>
-    <script src="./SGUIE-Net_files/bootstrap-4.0.0.js"></script>
+    <!-- <script src="./SGUIE-Net_files/popper.min.js"></script> -->
+    <script src="./static/js/bootstrap-4.0.0.js"></script>
 
 
 </body>
