--- a/SGUIE-Net.html
+++ b/SGUIE-Net.html
@@ -171,8 +171,11 @@
                             <pre>@article{qi2022sguienet,
     title={SGUIE-Net: Semantic Attention Guided Underwater Image Enhancement with Multi-Scale Perception},
     author={Qi Qi and Kunqian Li and Haiyong Zheng and Xiang Gao and Guojia Hou and Kun Sun},
-    journal={arXiv preprint arXiv:2201.02832},
-    year={2022}
+    journal={IEEE Transactions on Image Processing},
+    volume={31},
+    pages={6816--6830},
+    year={2022},
+    publisher={IEEE}
     }
                             </pre>
 
